# stm32f103zetx

./: .clang-format  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  Makefile_user.txt  README.md  STM32F103ZETx_FLASH.ld  format.py  make.mk  mingw32.cmake  sanitizer.cmake  stm32f103zetx.ioc  stm32init.py
Core/Inc/: exec.h  main.h  pc.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: dma.c  exec.c  exec.h  gpio.c  main.c  pc.c  stm32f1xx_it.c  usart.c
Drivers/: FileLists.cmake
Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f103xe.h  stm32f1xx.h
Drivers/CMSIS/Include/: cmsis_iccarm.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_flash.h  stm32f1xx_hal_pwr.h  stm32f1xx_hal_rcc.h  stm32f1xx_hal_rcc_ex.h
Drivers/STM32F1xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_pwr.c  stm32f1xx_hal_rcc_ex.c
Middlewares/: FileLists.cmake
bsp/: bsp-delay.c  bsp-delay.h  bsp-dma.h  bsp-flash.c  bsp-flash.h  bsp-gpio.h  bsp-usart.c  bsp-usart.h  bsp.h  bsp_delay.c  bsp_delay.h  bsp_dma.h  bsp_flash.c  bsp_flash.h  bsp_gpio.h  bsp_uart.c  bsp_usart.c  bsp_usart.h
cmake/: append_option.cmake  arm-none-eabi.cmake  check-.cmake  check.cmake  mingw64.cmake  standard.cmake
scripts/: stm32init.py
scripts/stm32/: c_cpp_properties.json  launch.json  tasks.json
scripts/stm32init/: c_cpp_properties.json
scripts/vscjson/: c_cpp_properties.json
src/: CMakeLists.txt  task.c  task.h
stm32init/: launch.json  tasks.json
test/: CMakeLists.txt  list2.c
timeslice/: CMakeLists.txt
timeslice/cmake/: output.cmake
timeslice/src/: list2.h
timeslice/test/: task.cpp
vscjson/: c_cpp_properties.json  launch.json
